Bug 349430: fix live bookmark icon alignment in the bookmarks menu, r+a=mconnor

--- a/mozilla/browser/themes/winstripe/browser/browser.css
+++ b/mozilla/browser/themes/winstripe/browser/browser.css
@@ -200,28 +200,28 @@ menuitem.bookmark-item {
 /* livemarks have the same layout as folder-item, but in the browser-only livemark-item.png */
 /* only the folder icon has any effect for now, item icon is unused */
 .bookmark-item[livemark="true"] { 
-  list-style-image: url("chrome://browser/skin/livemark-item.png") !important;
-  -moz-image-region: rect(0px, 36px, 18px, 18px) !important;
+  list-style-image: url("chrome://browser/skin/livemark-folder.png") !important;
+  -moz-image-region: rect(0px, 16px, 16px, 0px) !important;
 }
 
 .bookmark-item[livemark="true"][chromedir="rtl"] { 
-  list-style-image: url("chrome://browser/skin/livemark-item-rtl.png") !important;
-  -moz-image-region: rect(0px, 36px, 18px, 18px) !important;
+  list-style-image: url("chrome://browser/skin/livemark-folder-rtl.png") !important;
+  -moz-image-region: rect(0px, 16px, 16px, 0px) !important;
 }
 
 .bookmark-item[livemark="true"][open="true"],
 .bookmark-item[livemark="true"][open="true"][chromedir="rtl"] { 
-  -moz-image-region: rect(18px, 36px, 36px, 18px) !important;
+  -moz-image-region: rect(16px, 16px, 32px, 0px) !important;
 }
 
 .bookmark-item[type="menu"][livemark="true"],
 .bookmark-item[type="menu"][livemark="true"][chromedir="rtl"] { 
-  -moz-image-region: rect(1px, 53px, 17px, 37px) !important;
+  -moz-image-region: rect(0px, 32px, 16px, 16px) !important;
 }
 
 .bookmark-item[type="menu"][livemark="true"][open="true"],
 .bookmark-item[type="menu"][livemark="true"][open="true"][chromedir="rtl"] { 
-  -moz-image-region: rect(19px, 53px, 35px, 37px) !important;
+  -moz-image-region: rect(16px, 32px, 32px, 16px) !important;
 }
 
 /* ::::: primary toolbar buttons ::::: */
